# pitbox

./: Cargo.toml  LICENSE  README.md
assets/: flags.toml  nationality.toml  nationality_flags.toml
resources/: flags.toml  nationality.toml
src/: api.rs  cli.rs  commands.rs  lib.rs  main.rs  models.rs  output.rs  stats.rs
src/models/: common.rs  constructor_standings.rs  driver_standings.rs  drivers.rs  race_results.rs
