[package]
name = "pitbox"
version = "0.1.0"
edition = "2024"
description = "An F1 CLI that can output standings, results, and more."
license = "MIT"
repository = "https://github.com/ZacDanMon/pitbox"
keywords = ["f1", "formula1"]
categories = ["command-line-interface"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.1"
toml = "0.8"
